----
MVDSV v0.179 build 1976 (2005.05.19)
[server]
- build: define REGEX, for use external regex lib
  (for example: FreeBSD have regex functions in libc)
  else used integrated part of PCRE 5.0 library - http://www.pcre.org/
(Thanks to BorisU)
- new cvar sv_demoRegexp - all files meet the conditions regexp accepted as demos (for listing)
  default: "\.mvd(\.(gz|bz2|rar|zip))?$"
- give back from EXPEREMENTAL changes in 0.178b:
  'added drop client if no empty slots after "server is full" message (EXPERIMENTAL)'
- ATTENTION: default value of sv_crypt_rcon now is 1;
  use clients with rcon password ecryption support (ezQauke, qwdplayer) or set to 0 in server.cfg
- added support of halflife maps - BSP version 30 (from ezQuake)
- new 'cmd maps' - show maps list from localinfo 1000 - 1999
  (supported only by ktpro 1.63 build 42795 and newer)
  ktpro's command 'maps' can show only 1st 150 maps from list
(Thanks to JSS)
- bugfix ktpro 'cmd dl' with more then 1 demo in list (for example: 'cmd dl 1 2 3'):
  cancel download of a big demos (depend on download speed) after few seconds,
  big demo downloaded completely only if it is 1st in list, all small demos downloaded completely
    new cvar sv_use_internal_cmd_dl:
      0 - use mod dl-function (if mod have not dl function, then used internal dl-function)
      1 - use internal dl-function
      default: 1
  'cmd dl <N dots>' - download the Nth to last recorded demo, and can to add dots sequence in list,
  also can to add negative values - 'cmd dl -N' - download the Nth to last recorded demo
  (for example: 'cmd dl 1 ... 4 . -6 .. 22 ........');
  'download demonum/N' fully work same as 'cmd dl N'
  (N - posive or negative integer value or any quantity of dots)
(Thanks to [iBh]123)
- bugfix from Id Software's QWSV: calculate negative percentage of file while downloading
  if size of downloaded part is > 0x10000000b / 100 (~= 20.5Mb):
  (signed int32)20.5Mb * 100 => signed overflow => negative value